# pasta-eln

./: .codespellignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .sourcery.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTORS  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  README_PYPI.md  TODO.md  agents.md  analyseSignals.py  commit.py  git_hooks_pre-push  notes.md  notes2.md  opencode.json  pastaELN.py  pastaELN_CLI.py  pastaELN_Install.py  pastaMain.py  pastaResearch.py  pylint_plugins.py  pylint_qt_checker.py  pyproject.toml  releaseVersion.py  requirements-devel.txt  requirements-linux.txt  requirements-windows.txt  requirements.txt  requirements39.txt  run_tests.sh  setup.cfg  setup.py  (+3 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codespell.yml  docbuild.yml  installLinux.yml  installWindows.yml  mypy.yml  pylint.yml  pypi.yml  pytest.yml  update-contributors.yml
Tests/: 3Projects.py  test_3Projects.py
Tests/ExampleMeasurements/: 1500nmXX 5 7074 -4594.txt  story.odt
_pasta_eln_buildsupport/: formatters.py  setup.py
developerDocumentation/: Transfer_V1_V2.md
docs/: Makefile  README.md
docs/source/: _notes_on_rst.rst  addons.rst  agileProjects.rst  annexmetadata.rst  cmdline.rst  conf.py  couchDB.rst  credentials.rst  data_hierarchy_configuration.rst  datalad-concepts.rst  datalad.rst  dataverse_integration.rst  definitions.rst  develop.rst  developCode.rst  developInstall.rst  dodonts.rst  exchange.rst  extractors.rst  faqs.rst  getting-started.rst  gin.rst  index.rst  install.rst  installation.rst  metadata.rst  misc.rst  modref.rst  motivation.rst  ontology_configuration.rst  repositories.rst  software.rst  user_andrew.rst  user_brenda.rst  user_claire.rst  userstory.rst  verify.rst
htmlcov/: d_3970472c3997e00a___init___py.html  d_3970472c3997e00a_backend_py.html  d_3970472c3997e00a_database_py.html  d_3970472c3997e00a_fixedStringsJson_py.html  d_3970472c3997e00a_guiCommunicate_py.html  d_3970472c3997e00a_guiStyle_py.html  d_3970472c3997e00a_gui_py.html  d_3970472c3997e00a_handleDictionaries_py.html  d_3970472c3997e00a_inputOutput_py.html  d_3970472c3997e00a_installationTools_py.html  d_3970472c3997e00a_miscTools_py.html  d_3970472c3997e00a_mixin_cli_py.html  d_3970472c3997e00a_serverActions_py.html  d_6de5d08efdc5b3d7_extractor_jpg_py.html  d_6de5d08efdc5b3d7_extractor_md_py.html  d_72489903fe00c51c___init___py.html  d_72489903fe00c51c_body_py.html  d_72489903fe00c51c_configAuthors_py.html  d_72489903fe00c51c_configGUI_py.html  d_72489903fe00c51c_configSetupLinux_py.html  d_72489903fe00c51c_config_py.html  d_72489903fe00c51c_details_py.html  d_72489903fe00c51c_docTypes_py.html  d_72489903fe00c51c_form_py.html  d_72489903fe00c51c_ontology_py.html  d_72489903fe00c51c_projectGroup_py.html  d_72489903fe00c51c_projectLeafRenderer_py.html  d_72489903fe00c51c_projectTreeView_py.html  d_72489903fe00c51c_project_py.html  d_72489903fe00c51c_sidebar_py.html  d_72489903fe00c51c_tableHeader_py.html  d_72489903fe00c51c_table_py.html  d_743e60d7595103ae___init___py.html  d_743e60d7595103ae_test_gui_launch_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_01_demoIndentation_py.html  d_a44f0ac069e85531_test_02_demoIndentation_ExportImport_py.html  d_a44f0ac069e85531_test_50_importOthers_py.html  d_a44f0ac069e85531_test_99_3Projects_py.html  index.html  (+1 more)
pasta_eln/: __init__.py  _version.py  app.py  backend.py  cli.py  commonTools.py  communicate.py  database.py  definition_lookup.py  depricatedFunctions.py  dialogConfig.py  dialogConfigAuthors.py  dialogConfigGUI.py  dialogConfigSetupLinux.py  dialogConfigSetupWindows.py  dialogForm.py  dialogOntology.py  dialogProjectGroup.py  dialogTableHeader.py  elabFTW.py  elabFTWapi.py  elabFTWsync.py  fixedStrings.py  fixedStringsJson.py  fixed_strings_json.py  globalDefinition.py  gui.py  gui.py.orig  guiCommunicate.py  guiStyle.py  handleDictionaries.py  inputOutput.py  installationTools.py  installation_tools.py  miscTools.py  misc_tools.py  mixin_cli.py  printer.py  reformatDictionaries.py  serverActions.py  (+26 more)
pasta_eln/AddOns/: README.md  definition_autofill.py  extractor_csv.py  extractor_jpeg.py  extractor_jpg.py  extractor_json.py  extractor_log.py  extractor_md.py  extractor_png.py  extractor_py.py  extractor_tif.py  extractor_tsv.py  form_auto.py  project_html_report.py  project_importCSV.py  project_sort_children.py  table_plot.py  table_plotData.py
pasta_eln/Extractors/: extractor_csv.py  extractor_jpeg.py  extractor_jpg.py  extractor_json.py  extractor_md.py  (+2 more)
tests/: _test_50_importOthers.py  conftest.py  inputSamples.csv  misc.py  skip_test_03_dragDrop.py  slideShowGui.py  test_00_simple.py  test_01_3Projects.py  test_01_DefaultExample.py  test_01_demoIndentation.py  test_02_3Projects_ExportImport.py  test_02_3Projects_ExportImport1.py  test_02_3Projects_ExportImport3.py  test_02_copyMove.py  test_02_demoIndentation_ExportImport.py  test_03_3Projects_ExportImport3.py  test_03_dragDrop.py  test_03_importOthers.py  test_10_DefaultExampleAddProject.py  test_11_Export.py  test_12_Report.py  test_13_ElabFTW.py  test_13_ImportCSV.py  test_13_ImportOthers.py  test_30_GUI_simple.py  test_31_GUI_Project.py  test_32_GUI_Details.py  test_33_GUI_Config.py  test_34_GUI_Form.py  test_35_GUI_CreatedLink.py  test_35_GUI_CreatedLinka.py  test_35_GUI_CreatedLinkb.py  test_35_GUI_CreatedLinkc.py  test_3Projects.py  test_50_importOthers.py  test_51_3Projects.py  test_52_3Projects_ExportImport1.py  test_53_3Projects_ExportImport3.py  test_90_ImportOthers.py  test_90_importOthers.py  (+6 more)
testsComplicated/: README.md  _test_05_ElabFTW_pull.py  _test_10_ElabFTW_good.py  misc.py  test_01_Start.py  test_02_ElabFTW.py  test_02_Push.py  test_03_ElabFTW_good.py  test_05_CleanClient.py  test_06_Pull.py  test_07_AfterPull.py  test_10_Restart.py  test_10_TestTools.py  test_11_Pull.py  test_35_GUI_CreatedLinka.py  test_35_GUI_CreatedLinkb.py  test_51_importCorrosion.py  test_52_importSynteticTension.py  test_53_importSynteticIndentation.py  test_60_Repositories.py
(+738 files in other folders)
