[metadata]
url =https://pasta-eln.github.io/
author = The PASTA-ELN Team and Steffen Brinckmann
author_email = sbrinckm@gmail.com
description = The favorite ELN for experimental scientists
long_description = file:README_PYPI.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.7
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
install_requires =
    pyside6 ==6.2.4
    qt-material
    QtAwesome
    cloudant
    pandas
    numpy
    keyring
    requests
    anytree
    qrcode
    Pillow
    matplotlib
    cairosvg
    win-unicode-console;platform_system=='Windows'
    winshell;platform_system=='Windows'
    pypiwin32;platform_system=='Windows'
    pytest
    pytest-qt
    pytest-qt-app
    pytest-mock
    coverage
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = pasta_eln*

[options.extras_require]
# this matches the name used by -core and what is expected by some CI setups
devel =
    sphinx
    sphinx-rtd-theme
    pytest
    pytest-cov
    pytest-qt
    pytest-xvfb
    pytest-mock
    coverage
    pyqt6
    pyqt6-tools
    scalene

[options.entry_points]
# install the GUI starter as direct entrypoints
# overhead
gui_scripts =
    pastaELN = pasta_eln.gui:main
console_scripts =
    pastaELN_CLI = pasta_eln.cli:main
    pastaELN_Install = pasta_eln.installationTools:main

[coverage:report]
show_missing = True
# omit =
#    # versioneer code
#    # pasta_eln/_version.py

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
#exclude = pasta_eln/Extractors
exclude = (?x)(
    pasta_eln/GUI/ontology_configuration/create_type_dialog/create_type_dialog.py
    | pasta_eln/GUI/ontology_configuration/ontology_configuration.py
    | pasta_eln/Extractors )

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
    integration
env =
    D:QT_QPA_PLATFORM=offscreen