[metadata]
url = https://pasta-eln.github.io/
author = The PASTA-ELN Team and Steffen Brinckmann
author_email = sbrinckm@gmail.com
description = The favorite ELN for experimental scientists
long_description = file:README_PYPI.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.10
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
install_requires =
    anytree
    cryptography   # signing of .eln via minisign, leads to two requirements
    matplotlib
    pandas
    Pillow
    pyside6
    qrcode
    QtAwesome
    qt-material
    pypiwin32;platform_system=='Windows'
    requests
    win-unicode-console;platform_system=='Windows'
    winshell;platform_system=='Windows'
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = pasta_eln*

[options.extras_require]
# this matches the name used by -core and what is expected by some CI setups
# - only for information: not used to create the devel requirements file
devel =
    sphinx

[options.entry_points]
# install the GUI starter as direct entrypoints
# overhead
gui_scripts =
    pastaELN = pasta_eln.gui:startMain
console_scripts =
    pastaELN_CLI = pasta_eln.cli:main
    pastaELN_Install = pasta_eln.installationTools:main

[coverage:report]
show_missing = True
# omit =
#    # versioneer code
#    # pasta_eln/_version.py

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = (?x)(
          pasta_eln/AddOns)

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
    integration
env =
    D:QT_QPA_PLATFORM=offscreen


[isort]
line_length = 120
lines_between_sections = 0
